2007-02-14  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: If entering the first object level
	(i.e. the object for which the browser has been started) fails,
	now the error is raised directly (aborting the browser) instead of
	running into an empty levels list later.

2007-02-03  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: Add an xrepr implementation
	for the noitem object.

2007-01-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/completer.py (Completer.attr_matches): Fix small
	tab-completion bug with Enthought Traits objects with units.
	Thanks to a bug report by Tom Denniston
	<tom.denniston-AT-alum.dartmouth.org>.

2007-01-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_stock_completers.py (runlistpy): fix a
	bug where only .ipy or .py would be completed.  Once the first
	argument to %run has been given, all completions are valid because
	they are the arguments to the script, which may well be non-python
	filenames.

	* IPython/irunner.py (InteractiveRunner.run_source): major updates
	to irunner to allow it to correctly support real doctesting of
	out-of-process ipython code.

	* IPython/Magic.py (magic_cd): Make the setting of the terminal
	title an option (-noterm_title) because it completely breaks
	doctesting.

	* IPython/demo.py: fix IPythonDemo class that was not actually working.

2007-01-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (main): fix small bug where extensions were
	not being correctly recognized.

2007-01-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (xiter): Make sure that iterating
	a string containing a single line yields the string itself as the
	only item.

	* IPython/Extensions/ibrowse.py (ibrowse): Avoid entering an
	object if it's the same as the one on the last level (This avoids
	infinite recursion for one line strings).
